# wagtail-developer-reference

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
wagtail_developer_reference/: apps.py  models.py  wagtail_hooks.py
wagtail_developer_reference/migrations/: 0001_initial.py
wagtail_developer_reference/templates/: detail.html  index.html
