[project]
name = "wagtail-developer-reference"
version = "0.1.0"
description = "A visual auditing tool for Wagtail developers to track Page models and StreamField blocks."
readme = "README.md"
authors = [{name = "Four Digits", email = "info@fourdigits.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["django", "wagtail", "audit", "streamfield"]
dependencies = [
    "wagtail>=4.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/fourdigits/wagtail-developer-reference"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wagtail_developer_reference*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]